--- a/Entrega1/AndroidManifest.xml
+++ b/Entrega1/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/MiTema" >
         <activity
             android:name="com.example.asteroides.Asteroides"
             android:label="@string/app_name" >
@@ -21,6 +21,19 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".AcercaDe"
+            android:label="@string/acercade"
+            android:theme="@android:style/Theme.Dialog" >
+        </activity>
+        <activity
+            android:name=".Preferencias"
+            android:label="Preferencias" >
+        </activity>
+        <activity
+            android:name=".Puntuaciones"
+            android:label="Puntuaciones" >
         </activity>
     </application>
 
